# pixel-agents

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README.md  build-desktop.sh  clean-desktop.sh  package-lock.json  package.json  run-desktop.sh
src/: ArcadiaViewProvider.ts  PixelAgentsViewProvider.ts  agentManager.ts  assetLoader.ts  constants.ts  extension.ts  fileWatcher.ts  transcriptParser.ts
src/monitor/: agentStore.ts  eventBus.ts  fsUtils.ts  monitorController.ts  normalizedEvent.ts  settings.ts
src/monitor/git/: gitStatusPoller.ts  prStatusPoller.ts
src/monitor/sources/: codexSource.ts  opencodeSource.ts
webview-ui/: README.md  package-lock.json  package.json
webview-ui/public/assets/: default-layout.json
webview-ui/src/: App.tsx  constants.ts  index.css  vscodeApi.ts
webview-ui/src-tauri/: Cargo.toml  tauri.conf.json
webview-ui/src-tauri/icons/: icon.icns
webview-ui/src-tauri/src/: lib.rs  main.rs
webview-ui/src/components/: BottomToolbar.tsx  CharacterInfoBoard.tsx  DebugView.tsx  MonitorDashboard.tsx  MonitorToasts.tsx  SettingsModal.tsx  ZoomControls.tsx
webview-ui/src/hooks/: useEditorActions.ts  useExtensionMessages.ts
webview-ui/src/office/: types.ts
webview-ui/src/office/components/: OfficeCanvas.tsx  ToolOverlay.tsx
webview-ui/src/office/engine/: characters.ts  officeState.ts
webview-ui/src/office/layout/: furnitureCatalog.ts
webview-ui/src/office/sprites/: spriteData.ts
