[package]
name = "pixel-agents-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "pixel_agents_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
dirs = "6.0"
opener = "0.7"
arboard = "3.4"
regex = "1.11"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
